# Catalogo-Livros-App

./: CHANGELOG.md  buildar.md  consertar.md  next.config.ts  package-lock.json  package.json
scripts/: generate-icon-ico.mjs  rename-msi.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  text_limits.rs
src/app/: HomePageClient.tsx  layout.tsx  page.tsx
src/components/: BackupPanel.tsx  BookCover.tsx  BookSortableList.tsx  ChapterSortableList.tsx  ConfirmDialog.tsx  ItemSortableList.tsx  LibraryView.tsx  ProgressRing.tsx  ScrollReveal.tsx  SearchField.tsx  SettingsMenu.tsx
src/lib/: dnd.ts  fieldLimits.ts  labels.ts  scrollAnimation.ts  search.ts  tauri.ts
src/providers/: AppSettings.tsx  Providers.tsx  ThemeRegistry.tsx
src/theme/: theme.ts
